--- a/public/js/src/hcb-static-page/manage/widget/templates/Form.html
+++ b/public/js/src/hcb-static-page/manage/widget/templates/Form.html
@@ -26,7 +26,9 @@
          data-dojo-type="dojo-ckeditor/Editor"
          data-dojo-attach-point="contentEditorWidget"
          data-dojo-props='name:"content",
-                          settings: {filebrowserUploadUrl: "${filebrowserUploadUrl}"}'></div>
+                          settings: {
+                          filebrowserUploadUrl: "${filebrowserUploadUrl}",
+                          allowedContent: true}'></div>
     ${!_t.contentHelp}
 
     <input class="${baseClass}AddButton"
