fix & coding form + add tabIcon

--- a/public/js/src/hcb-static-page/manage/widget/templates/Form.html
+++ b/public/js/src/hcb-static-page/manage/widget/templates/Form.html
@@ -1,35 +1,48 @@
 <form data-dojo-attach-point="containerNode" class="dijitHidden">
-    ${!_t.urlLabel}
-    <input class="${baseClass}Url" data-dojo-type="dijit/form/TextBox" data-dojo-props='name:"pageUrl"' />
-    ${!_t.urlHelp}
 
-    ${!_t.metaTitleLabel}
-    <input class="${baseClass}Title"
-           data-dojo-type="dijit/form/Textarea"
-           data-dojo-props='name:"pageTitle", maxLength: 300' />
-    ${!_t.metaTitleHelp}
+    <div class="row">
+        <label>${!_t.urlLabel}</label>
+        <input class="${baseClass}Url"
+               data-dojo-type="dijit/form/TextBox"
+               data-dojo-props='name:"pageUrl"' />
+        <div class="field-description">${!_t.urlHelp}</div>
+    </div>
 
-    ${!_t.metaDescriptionLabel}
-    <input class="${baseClass}Description"
-           data-dojo-type="dijit/form/Textarea"
-           data-dojo-props='name:"pageDescription", maxLength: 300' />
-    ${!_t.metaDescriptionHelp}
+    <div class="row">
+        <label>${!_t.metaTitleLabel}</label>
+        <input class="${baseClass}Title"
+               data-dojo-type="dijit/form/Textarea"
+               data-dojo-props='name:"pageTitle", maxLength: 300' />
+        <div class="field-description">${!_t.metaTitleHelp}</div>
+    </div>
 
-    ${!_t.metaKeywordsLabel}
-    <input class="${baseClass}Keywords"
-           data-dojo-type="dijit/form/Textarea"
-           data-dojo-props='name:"pageKeywords", maxLength: 300' />
-    ${!_t.metaKeywordsHelp}
+    <div class="row">
+        <label>${!_t.metaDescriptionLabel}</label>
+        <input class="${baseClass}Description"
+               data-dojo-type="dijit/form/Textarea"
+               data-dojo-props='name:"pageDescription", maxLength: 300' />
+        <div class="field-description">${!_t.metaDescriptionHelp}</div>
+    </div>
 
-    ${!_t.contentLabel}
-    <div class="${baseClass}Editor"
-         data-dojo-type="dojo-ckeditor/Editor"
-         data-dojo-attach-point="contentEditorWidget"
-         data-dojo-props='name:"content",
-                          settings: {
-                          filebrowserUploadUrl: "${filebrowserUploadUrl}",
-                          allowedContent: true}'></div>
-    ${!_t.contentHelp}
+    <div class="row">
+        <label>${!_t.metaKeywordsLabel}</label>
+        <input class="${baseClass}Keywords"
+               data-dojo-type="dijit/form/Textarea"
+               data-dojo-props='name:"pageKeywords", maxLength: 300' />
+        <div class="field-description">${!_t.metaKeywordsHelp}</div>
+    </div>
+
+    <div class="row">
+        ${!_t.contentLabel}
+        <div class="${baseClass}Editor"
+             data-dojo-type="dojo-ckeditor/Editor"
+             data-dojo-attach-point="contentEditorWidget"
+             data-dojo-props='name:"content",
+                              settings: {
+                              filebrowserUploadUrl: "${filebrowserUploadUrl}",
+                              allowedContent: true}'></div>
+        <div class="field-description">${!_t.contentHelp}</div>
+    </div>
 
     <input class="${baseClass}AddButton"
            data-dojo-type="dojo-common/form/BusyButton"
