Added russian translation. Merge all translation to one file, it is more usefull. Refactored Create static page, remove all duplicated code with UpdateService.

--- a/public/js/src/hcb-static-page/manage/widget/templates/Form.html
+++ b/public/js/src/hcb-static-page/manage/widget/templates/Form.html
@@ -43,13 +43,13 @@
         <div class="field-description">${!_t.contentHelp}</div>
     </div>
 
-    <input class="${baseClass}AddButton"
+    <input class="${baseClass}SaveButton"
            data-dojo-type="dojo-common/form/BusyButton"
            data-dojo-attach-point="saveButtonWidget"
            data-dojo-attach-event="onClick: save"
            data-dojo-props='name:"send",
                             disabled: true,
-                            label:"${!_t.addButton}"' />
+                            label:"${!_t.saveButton}"' />
 
     <input class="${baseClass}ResetButton"
            data-dojo-type="dijit/form/Button"
